# Artel

./: README.md
Arduino/ArtelController/: Kinematics.cpp
Engine/Artel/: Artel.sln  Artel.vcxproj  example_win32_directx10.vcxproj.filters  imgui.ini  imgui_log.txt
Engine/Artel/Debug/: Artel.vcxproj.FileListAbsolute.txt  ArtelStudio.exe.recipe  example_win32_directx10.exe.recipe  example_win32_directx10.vcxproj.FileListAbsolute.txt  imgui.ini  vc142.idb
Engine/Artel/Debug/ArtelStudio.tlog/: ArtelStudio.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Engine/Artel/Debug/example_.345A953E.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  example_win32_directx10.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Engine/Artel/Sources/: Artel.cpp  Artel.h
Engine/Artel/Sources/Application/: GUILayer.cpp  GUILayer.h  Styles.cpp  Styles.h  Typography.cpp  Typography.h
Engine/Artel/Sources/Base/: File.cpp  File.h  Image.cpp  Image.h  Log.cpp  Log.h
Engine/Artel/Sources/Core/: ImageProcessing.cpp  ImageProcessing.h  Serial.h
Engine/Artel/src/: Application.cpp  Application.h  EntryPoint.cpp  Makefile  MakefileBack  Robot.cpp  Robot.h  imgui.ini
Simulation/utils/: Robot.py  RobotDelta.py  delta_workspace.py
Simulation/visual_kinematics/: Robot.py
Software/: Software.code-workspace
Software/ArtelSender/: DeltaRobotKinematics.py  core.py  gcode.py  gui.py  locations.csv  robot.py  send.py  utils.py
Software/ArtelSender/GUI/: Rumble.py  locationsTemp.csv  main.py  viewTableData.py
Software/ArtelSender/config/: locations.csv  locations_tmp.csv  paletteLocations.csv
Software/ArtelSender/gcodes/: CustomGcode.gcode
Software/ArtelSimulations/: DeltaKinematicsMouse.py  DeltaRobotSimulation.py  Gcoder.py  MousetoServo.py  Resume.html  TestSerial.py  interpolate3dnew.py
Software/ArtelSimulations/GCodes/: new.gcode  square.gcode
Software/ArtelSimulations/Mathmatical/: LinearInterpolation.py  LinearInterpolation3d.py  TestKinem.py
Software/ArtelSimulations/MicrodevDeltaRobot/: Pyaudio.py
Software/ArtelSimulations/Simulations/: Simulation#1.py
Software/Client/ArtelController/: ArtelController.ino  Kinematics.h
Software/Client/CPP Version/Artel/: CMakeLists.txt
Software/Client/CPP Version/Artel/src/: Makefile  example_sdl_opengl3  imgui.ini  main.cpp
Software/Client/Libs/: Artel.cpp  Motion.h
Software/Simulations/: Gcode.py  Serial.py  requirements.txt
Software/Simulations/GCodes/: XYZ.gcode
Software/Simulations/Mathmatical/: 3dequ.py  Kinematics.cpp  LinearInterpolation2d.py
Software/Simulations/MicrodevDeltaRobot/: requirements.txt
Software/Simulations/Simulations/: Simulation#2.py  Simulation.py  SimulationControl.py
(+10 files in other folders)
